# practice_infotecs

./: CMakeLists.txt  Dockerfile  Vagrantfile  install_docker.yml  install_sqlite.yml  inventory.ini  readme.md
